Fixed scrolling on small screens

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -158,20 +158,24 @@ main > * {
 }
 
 .pane {
+	overflow: auto;
 	box-sizing: border-box;
 	padding: 12px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	background-color: var(--pane-background-color);
-	overflow-y: scroll;
 	z-index: 2;
 	opacity: 1;
 	transition: opacity 0.2s;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.pane .fill {
+	flex: 1 1 auto;
 }
 
 .pane section {
+	flex: none;
 	width: 100%;
 	max-width: 480px;
 	font-size: 16px;
